@@ -20,18 +20,15 @@ package org.apache.pinot.segment.local.recordtransformer;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.google.common.base.Preconditions;
-import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
-import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import org.apache.pinot.common.metrics.ServerGauge;
 import org.apache.pinot.common.metrics.ServerMeter;
@@ -53,10 +50,10 @@ import org.slf4j.LoggerFactory;
 
 
 /**
- * This transformer transforms records with varying keys such that they can be stored in a table with a fixed schema.
- * Since these records have varying keys, it is impractical to store each field in its own table column. At the same
- * time, most (if not all) fields may be important to the user, so we should not drop any field unnecessarily. So this
- * transformer primarily takes record-fields that don't exist in the schema and stores them in a type of catchall field.
+ * This transformer transforms records with varied structures so that they can be stored in a Pinot table.
+ * Since the records do not have uniform structure, it is impractical to store each field in its own table column.
+ * In high level, if a field exists in the table schema, this transformer puts the value to the corresponding column.
+ * For those fields which do not exist in the table schema, it stores them in a type of catchall field in a json map.
  * For example, consider this record:
  * <pre>
  * {
@@ -64,40 +61,21 @@ import org.slf4j.LoggerFactory;
  *   "b": "2",
  *   "c": {
  *     "d": 3,
- *     "e_noindex": 4,
- *     "f_noindex": {
- *       "g": 5
- *      },
  *     "x": {
  *       "y": 9,
- *       "z_noindex": 10
  *     }
- *   }
- *   "h_noindex": "6",
- *   "i_noindex": {
- *     "j": 7,
- *     "k": 8
  *   }
  * }
  * </pre>
- * And let's say the table's schema contains these fields:
+ * And let's say the table's schema is:
  * <ul>
  *   <li>a</li>
  *   <li>c</li>
  *   <li>c.d</li>
  * </ul>
  * <p>
- * Notice that the transformer:
- * <ul>
- *   <li>Flattens nested fields which exist in the schema, like "tags.platform"</li>
- *   <li>Moves fields which don't exist in the schema and have the suffix "_noIndex" into the "unindexableExtras" field
- *   (the field name is configurable)</li>
- *   <li>Moves any remaining fields which don't exist in the schema into the "indexableExtras" field (the field name is
- *   configurable)</li>
- * </ul>
- * <p>
  * The record would be transformed into the following (refer to {@link SchemaConformingTransformerConfig} for
- * default constant values):
+ * default constant values) where json_data is the catch-all field:
  * <pre>
  * {
  *   "a": 1,
@@ -110,26 +88,12 @@ import org.slf4j.LoggerFactory;
  *       }
  *     }
  *   }
- *   "json_data_no_idx": {
- *     "c": {
- *       "e_noindex": 4,
- *       "f_noindex": {
- *         "g": 5
- *       },
- *       "x": {
- *         "z_noindex": 10
- *       }
- *     },
- *     "h_noindex": "6",
- *     "i_noindex": {
- *       "j": 7,
- *       "k": 8
- *     }
- *   },
- *   "__mergedTextIndex": [
- *     "1:a", "2:b", "3:c.d", "9:c.x.y"
- *   ]
  * }
+ * Apart from the basic transformation above, this transformer today also does the following additional tasks (which in
+ * future can be decoupled from this transformer):
+ *    1. Put all field + value pair in a special column "_mergedTextIndex" to facilitate full text indexing and search.
+ *    This extra step can be enabled via mergedTextIndexFieldSpec.
+ *    2. Allow users to tag certain fields in the input record not to be included in the catch-all field.
  * </pre>
  * <p>
  */
@@ -153,6 +117,10 @@ public class SchemaConformingTransformer implements RecordTransformer {
   private int _jsonKeyValueSeparatorByteCount;
   private long _mergedTextIndexDocumentBytesCount = 0L;
   private long _mergedTextIndexDocumentCount = 0L;
+  private GenericRow _reusedOutputRecord = new GenericRow();
+  private Map<String, Object> _reusedMergedTextIndexMap = new HashMap<>();
+  private Map<String, Object> _reusedIndexableExtras = new HashMap<>();
+  private Map<String, Object> _reusedUnindexableExtras = new HashMap<>();
 
   public SchemaConformingTransformer(TableConfig tableConfig, Schema schema) {
     if (null == tableConfig.getIngestionConfig() || null == tableConfig.getIngestionConfig()
@@ -186,8 +154,7 @@ public class SchemaConformingTransformer implements RecordTransformer {
   /**
    * Validates the schema against the given transformer's configuration.
    */
-  public static void validateSchema(@Nonnull Schema schema,
-      @Nonnull SchemaConformingTransformerConfig transformerConfig) {
+  public static void validateSchema(Schema schema, SchemaConformingTransformerConfig transformerConfig) {
     validateSchemaFieldNames(schema.getPhysicalColumnNames(), transformerConfig);
 
     String indexableExtrasFieldName = transformerConfig.getIndexableExtrasField();
@@ -259,8 +226,8 @@ public class SchemaConformingTransformer implements RecordTransformer {
    *   with an empty sub-key. E.g., the field name "a..b" corresponds to the JSON {"a": {"": {"b": ...}}}</li>
    * </ul>
    */
-  private static SchemaTreeNode validateSchemaAndCreateTree(@Nonnull Schema schema,
-      @Nonnull SchemaConformingTransformerConfig transformerConfig)
+  private static SchemaTreeNode validateSchemaAndCreateTree(Schema schema,
+      SchemaConformingTransformerConfig transformerConfig)
       throws IllegalArgumentException {
     Set<String> schemaFields = schema.getPhysicalColumnNames();
     Map<String, String> jsonKeyPathToColumnNameMap = new HashMap<>();
@@ -297,7 +264,7 @@ public class SchemaConformingTransformer implements RecordTransformer {
   /**
    * @return The field type for the given extras field
    */
-  private static DataType getAndValidateExtrasFieldType(Schema schema, @Nonnull String extrasFieldName) {
+  private static DataType getAndValidateExtrasFieldType(Schema schema, String extrasFieldName) {
     FieldSpec fieldSpec = schema.getFieldSpecFor(extrasFieldName);
     Preconditions.checkState(null != fieldSpec, "Field '%s' doesn't exist in schema", extrasFieldName);
     DataType fieldDataType = fieldSpec.getDataType();
@@ -350,34 +317,35 @@ public class SchemaConformingTransformer implements RecordTransformer {
   @Nullable
   @Override
   public GenericRow transform(GenericRow record) {
-    GenericRow outputRecord = new GenericRow();
-    Map<String, Object> mergedTextIndexMap = new HashMap<>();
+    _reusedOutputRecord.clear();
+    _reusedMergedTextIndexMap.clear();
+    _reusedIndexableExtras.clear();
+    _reusedUnindexableExtras.clear();
 
     try {
-      Deque<String> jsonPath = new ArrayDeque<>();
-      ExtraFieldsContainer extraFieldsContainer =
-          new ExtraFieldsContainer(null != _transformerConfig.getUnindexableExtrasField());
+      List<String> jsonPath = new ArrayList<>();
       for (Map.Entry<String, Object> recordEntry : record.getFieldToValueMap().entrySet()) {
         String recordKey = recordEntry.getKey();
         Object recordValue = recordEntry.getValue();
-        jsonPath.addLast(recordKey);
-        ExtraFieldsContainer currentFieldsContainer =
-            processField(_schemaTree, jsonPath, recordValue, true, outputRecord, mergedTextIndexMap);
-        extraFieldsContainer.addChild(currentFieldsContainer);
-        jsonPath.removeLast();
+        jsonPath.add(recordKey);
+        processField(_schemaTree, jsonPath, recordValue, true, _reusedOutputRecord,
+            _reusedMergedTextIndexMap, _reusedIndexableExtras, _reusedUnindexableExtras);
+        jsonPath.remove(jsonPath.size() - 1);
       }
-      putExtrasField(_transformerConfig.getIndexableExtrasField(), _indexableExtrasFieldType,
-          extraFieldsContainer.getIndexableExtras(), outputRecord);
-      putExtrasField(_transformerConfig.getUnindexableExtrasField(), _unindexableExtrasFieldType,
-          extraFieldsContainer.getUnindexableExtras(), outputRecord);
 
-      // Generate merged text index
-      if (null != _mergedTextIndexFieldSpec && !mergedTextIndexMap.isEmpty()) {
-        List<String> luceneDocuments = getLuceneDocumentsFromMergedTextIndexMap(mergedTextIndexMap);
+      putExtrasField(_transformerConfig.getIndexableExtrasField(), _indexableExtrasFieldType,
+          _reusedIndexableExtras, _reusedOutputRecord);
+      putExtrasField(_transformerConfig.getUnindexableExtrasField(), _unindexableExtrasFieldType,
+          _reusedUnindexableExtras, _reusedOutputRecord);
+
+      // Generate merged text index. This optional step puts all field + value pairs in the input record in a special
+      // column "_mergedTextIndex" to perform full text indexing and search.
+      if (null != _mergedTextIndexFieldSpec && !_reusedMergedTextIndexMap.isEmpty()) {
+        List<String> luceneDocuments = getLuceneDocumentsFromMergedTextIndexMap(_reusedMergedTextIndexMap);
         if (_mergedTextIndexFieldSpec.isSingleValueField()) {
-          outputRecord.putValue(_mergedTextIndexFieldSpec.getName(), String.join(" ", luceneDocuments));
+          _reusedOutputRecord.putValue(_mergedTextIndexFieldSpec.getName(), String.join(" ", luceneDocuments));
         } else {
-          outputRecord.putValue(_mergedTextIndexFieldSpec.getName(), luceneDocuments);
+          _reusedOutputRecord.putValue(_mergedTextIndexFieldSpec.getName(), luceneDocuments);
         }
       }
     } catch (Exception e) {
@@ -385,10 +353,10 @@ public class SchemaConformingTransformer implements RecordTransformer {
         throw e;
       }
       _logger.error("Couldn't transform record: {}", record.toString(), e);
-      outputRecord.putValue(GenericRow.INCOMPLETE_RECORD_KEY, true);
+      _reusedOutputRecord.putValue(GenericRow.INCOMPLETE_RECORD_KEY, true);
     }
 
-    return outputRecord;
+    return _reusedOutputRecord;
   }
 
   /**
@@ -438,25 +406,25 @@ public class SchemaConformingTransformer implements RecordTransformer {
    * @return ExtraFieldsContainer carries the indexable and unindexable fields of the current node as well as its
    * subtree
    */
-  private ExtraFieldsContainer processField(SchemaTreeNode parentNode, Deque<String> jsonPath, Object value,
-      boolean isIndexable, GenericRow outputRecord, Map<String, Object> mergedTextIndexMap) {
+  private void processField(SchemaTreeNode parentNode, List<String> jsonPath, Object value,
+      boolean isIndexable, GenericRow outputRecord, Map<String, Object> mergedTextIndexMap,
+      Map<String, Object> indexableExtras, Map<String, Object> unindexableExtras) {
     // Common variables
     boolean storeIndexableExtras = _transformerConfig.getIndexableExtrasField() != null;
     boolean storeUnindexableExtras = _transformerConfig.getUnindexableExtrasField() != null;
-    String key = jsonPath.peekLast();
-    ExtraFieldsContainer extraFieldsContainer = new ExtraFieldsContainer(storeUnindexableExtras);
+    String key = jsonPath.get(jsonPath.size() - 1);
 
     // Base case
     if (StreamDataDecoderImpl.isSpecialKeyType(key) || GenericRow.isSpecialKeyType(key)) {
       outputRecord.putValue(key, value);
-      return extraFieldsContainer;
+      return;
     }
 
     String keyJsonPath = String.join(".", jsonPath);
 
     Set<String> fieldPathsToDrop = _transformerConfig.getFieldPathsToDrop();
     if (null != fieldPathsToDrop && fieldPathsToDrop.contains(keyJsonPath)) {
-      return extraFieldsContainer;
+      return;
     }
 
     SchemaTreeNode currentNode =
@@ -471,29 +439,29 @@ public class SchemaConformingTransformer implements RecordTransformer {
       if (_transformerConfig.getFieldPathsToPreserveInputWithIndex().contains(keyJsonPath)) {
         flattenAndAddToMergedTextIndexMap(mergedTextIndexMap, keyJsonPath, value);
       }
-      return extraFieldsContainer;
+      return;
     }
     String unindexableFieldSuffix = _transformerConfig.getUnindexableFieldSuffix();
     isIndexable = isIndexable && (null == unindexableFieldSuffix || !key.endsWith(unindexableFieldSuffix));
 
     // return in advance to truncate the subtree if nothing left to be added
     if (currentNode == null && !storeIndexableExtras && !storeUnindexableExtras) {
-      return extraFieldsContainer;
+      return;
     }
 
     if (value == null) {
-      return extraFieldsContainer;
+      return;
     }
     if (!(value instanceof Map)) {
       // leaf node
       if (!isIndexable) {
-        extraFieldsContainer.addUnindexableEntry(key, value);
+        addEntryToExtras(jsonPath, unindexableExtras, key, value);
       } else {
         if (null != currentNode && currentNode.isColumn()) {
           // In schema
           outputRecord.putValue(currentNode.getColumnName(), currentNode.getValue(value));
           if (_transformerConfig.getFieldsToDoubleIngest().contains(keyJsonPath)) {
-            extraFieldsContainer.addIndexableEntry(key, value);
+            addEntryToExtras(jsonPath, indexableExtras, key, value);
           }
           mergedTextIndexMap.put(currentNode.getColumnName(), value);
         } else {
@@ -501,24 +469,22 @@ public class SchemaConformingTransformer implements RecordTransformer {
           // into the extraField column of the table.
           if (storeIndexableExtras) {
             if (!_transformerConfig.getFieldPathsToSkipStorage().contains(keyJsonPath)) {
-              extraFieldsContainer.addIndexableEntry(key, value);
+              addEntryToExtras(jsonPath, indexableExtras, key, value);
             }
             mergedTextIndexMap.put(keyJsonPath, value);
           }
         }
       }
-      return extraFieldsContainer;
+      return;
     }
     // Traverse the subtree
     Map<String, Object> valueAsMap = (Map<String, Object>) value;
     for (Map.Entry<String, Object> entry : valueAsMap.entrySet()) {
-      jsonPath.addLast(entry.getKey());
-      ExtraFieldsContainer childContainer =
-          processField(currentNode, jsonPath, entry.getValue(), isIndexable, outputRecord, mergedTextIndexMap);
-      extraFieldsContainer.addChild(key, childContainer);
-      jsonPath.removeLast();
+      jsonPath.add(entry.getKey());
+      processField(currentNode, jsonPath, entry.getValue(), isIndexable, outputRecord, mergedTextIndexMap,
+          indexableExtras, unindexableExtras);
+      jsonPath.remove(jsonPath.size() - 1);
     }
-    return extraFieldsContainer;
   }
 
   /**
@@ -555,6 +521,15 @@ public class SchemaConformingTransformer implements RecordTransformer {
 
     // If the value is a single value
     addLuceneDoc(indexDocuments, mergedTextIndexDocumentMaxLength, key, kv.getValue().toString());
+  }
+
+  private void addEntryToExtras(List<String> jsonPath, Map<String, Object> extras, String key, Object value) {
+    Map<String, Object> curMap = extras;
+    for (int i = 0; i < jsonPath.size() - 1; i++) {
+      String curKey = jsonPath.get(i);
+      curMap = (Map<String, Object>) curMap.computeIfAbsent(curKey, k -> new HashMap<String, Object>());
+    }
+    curMap.put(key, value);
   }
 
   private void addLuceneDoc(List<String> indexDocuments, Integer mergedTextIndexDocumentMaxLength, String key,
@@ -605,7 +580,7 @@ public class SchemaConformingTransformer implements RecordTransformer {
    */
   private void putExtrasField(String fieldName, DataType fieldType, Map<String, Object> field,
       GenericRow outputRecord) {
-    if (null == field) {
+    if (null == field || field.isEmpty()) {
       return;
     }
 
@@ -629,11 +604,14 @@ public class SchemaConformingTransformer implements RecordTransformer {
     final Integer mergedTextIndexDocumentMaxLength = _transformerConfig.getMergedTextIndexDocumentMaxLength();
     final @Nullable
     List<String> luceneDocuments = new ArrayList<>();
-    mergedTextIndexMap.entrySet().stream().filter(kv -> null != kv.getKey() && null != kv.getValue())
-        .filter(kv -> !_transformerConfig.getMergedTextIndexPathToExclude().contains(kv.getKey())).filter(
-        kv -> !base64ValueFilter(kv.getValue().toString().getBytes(),
-            _transformerConfig.getMergedTextIndexBinaryDocumentDetectionMinLength())).filter(
-        kv -> !MERGED_TEXT_INDEX_SUFFIX_TO_EXCLUDE.stream()
+    mergedTextIndexMap.entrySet().stream()
+        .filter(kv -> null != kv.getKey() && null != kv.getValue())
+        .filter(kv -> !_transformerConfig.getMergedTextIndexPathToExclude().contains(kv.getKey()))
+        .filter(kv -> !base64ValueFilter(kv.getValue().toString().getBytes(),
+            _transformerConfig.getMergedTextIndexBinaryDocumentDetectionMinLength()))
+        .filter(kv -> _transformerConfig.getMergedTextIndexPrefixToExclude().stream()
+            .noneMatch(prefix -> kv.getKey().startsWith(prefix)))
+        .filter(kv -> !MERGED_TEXT_INDEX_SUFFIX_TO_EXCLUDE.stream()
             .anyMatch(suffix -> kv.getKey().endsWith(suffix))).forEach(kv -> {
       generateTextIndexLuceneDocument(kv, luceneDocuments, mergedTextIndexDocumentMaxLength);
     });
@@ -685,7 +663,6 @@ class SchemaTreeNode {
   // Taking the example of key "x.y.z", the keyName will be "z" and the parentPath will be "x.y"
   // Root node would have keyName as "" and parentPath as null
   // Root node's children will have keyName as the first level key and parentPath as ""
-  @Nonnull
   private final String _keyName;
   @Nullable
   private String _columnName;
@@ -787,89 +764,5 @@ class SchemaTreeNode {
       return _keyName;
     }
     return _parentPath + JsonUtils.KEY_SEPARATOR + _keyName;
-  }
-}
-
-/**
- * A class to encapsulate the "extras" fields (indexableExtras and unindexableExtras) at a node in the record (when
- * viewed as a tree).
- */
-class ExtraFieldsContainer {
-  private Map<String, Object> _indexableExtras = null;
-  private Map<String, Object> _unindexableExtras = null;
-  private final boolean _storeUnindexableExtras;
-
-  ExtraFieldsContainer(boolean storeUnindexableExtras) {
-    _storeUnindexableExtras = storeUnindexableExtras;
-  }
-
-  public Map<String, Object> getIndexableExtras() {
-    return _indexableExtras;
-  }
-
-  public Map<String, Object> getUnindexableExtras() {
-    return _unindexableExtras;
-  }
-
-  /**
-   * Adds the given kv-pair to the indexable extras field
-   */
-  public void addIndexableEntry(String key, Object value) {
-    if (null == _indexableExtras) {
-      _indexableExtras = new HashMap<>();
-    }
-    if (key == null && value instanceof Map) {
-      // If the key is null, it means that the value is a map that should be merged with the indexable extras
-      _indexableExtras.putAll((Map<String, Object>) value);
-    } else if (_indexableExtras.containsKey(key) && _indexableExtras.get(key) instanceof Map && value instanceof Map) {
-      // If the key already exists in the indexable extras and both the existing value and the new value are maps,
-      // merge the two maps
-      ((Map<String, Object>) _indexableExtras.get(key)).putAll((Map<String, Object>) value);
-    } else {
-      _indexableExtras.put(key, value);
-    }
-  }
-
-  /**
-   * Adds the given kv-pair to the unindexable extras field (if any)
-   */
-  public void addUnindexableEntry(String key, Object value) {
-    if (!_storeUnindexableExtras) {
-      return;
-    }
-    if (null == _unindexableExtras) {
-      _unindexableExtras = new HashMap<>();
-    }
-    if (key == null && value instanceof Map) {
-      // If the key is null, it means that the value is a map that should be merged with the unindexable extras
-      _unindexableExtras.putAll((Map<String, Object>) value);
-    } else if (_unindexableExtras.containsKey(key) && _unindexableExtras.get(key) instanceof Map
-        && value instanceof Map) {
-      // If the key already exists in the uindexable extras and both the existing value and the new value are maps,
-      // merge the two maps
-      ((Map<String, Object>) _unindexableExtras.get(key)).putAll((Map<String, Object>) value);
-    } else {
-      _unindexableExtras.put(key, value);
-    }
-  }
-
-  /**
-   * Given a container corresponding to a child node, attach the extras from the child node to the extras in this node
-   * at the given key.
-   */
-  public void addChild(String key, ExtraFieldsContainer child) {
-    Map<String, Object> childIndexableFields = child.getIndexableExtras();
-    if (null != childIndexableFields) {
-      addIndexableEntry(key, childIndexableFields);
-    }
-
-    Map<String, Object> childUnindexableFields = child.getUnindexableExtras();
-    if (null != childUnindexableFields) {
-      addUnindexableEntry(key, childUnindexableFields);
-    }
-  }
-
-  public void addChild(ExtraFieldsContainer child) {
-    addChild(null, child);
   }
 }
