@@ -23,8 +23,6 @@ import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -47,6 +45,7 @@ import org.apache.pinot.segment.spi.index.metadata.SegmentMetadataImpl;
 import org.apache.pinot.segment.spi.index.startree.AggregationFunctionColumnPair;
 import org.apache.pinot.segment.spi.index.startree.AggregationSpec;
 import org.apache.pinot.segment.spi.index.startree.StarTreeV2Metadata;
+import org.apache.pinot.spi.config.table.FieldConfig;
 import org.apache.pinot.spi.config.table.StarTreeAggregationConfig;
 import org.apache.pinot.spi.config.table.StarTreeIndexConfig;
 import org.apache.pinot.spi.data.FieldSpec;
@@ -56,41 +55,41 @@ import org.testng.annotations.Test;
 
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
-import static org.testng.AssertJUnit.assertEquals;
-import static org.testng.AssertJUnit.assertFalse;
-import static org.testng.AssertJUnit.assertTrue;
+import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertFalse;
+import static org.testng.Assert.assertTrue;
 
 
 public class StarTreeBuilderUtilsTest {
   @Test
   public void testAreStarTreeBuilderConfigListsEqual() {
     // Create StartTreeIndexConfigs to test for unequal starTree configs.
-    StarTreeIndexConfig starTreeIndexConfig1 = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig1 = new StarTreeIndexConfig(List.of("Carrier", "Distance"), null,
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
 
     // Different skip star node creation.
     StarTreeIndexConfig starTreeIndexConfig2 =
-        new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), Collections.singletonList("Distance"),
-            Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+        new StarTreeIndexConfig(List.of("Carrier", "Distance"), List.of("Distance"),
+            List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
 
     // Different dimension split order.
-    StarTreeIndexConfig starTreeIndexConfig3 = new StarTreeIndexConfig(Arrays.asList("Distance", "Carrier"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig3 = new StarTreeIndexConfig(List.of("Distance", "Carrier"), null,
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
 
     // Different max leaf records.
-    StarTreeIndexConfig starTreeIndexConfig4 = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 200);
+    StarTreeIndexConfig starTreeIndexConfig4 = new StarTreeIndexConfig(List.of("Carrier", "Distance"), null,
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 200);
 
     // Create StartTreeAggregationConfigs with StarTreeAggregationConfig.
     StarTreeAggregationConfig starTreeAggregationConfig1 = new StarTreeAggregationConfig("Distance", "MAX");
 
     // Different AggregationConfig.
-    StarTreeIndexConfig starTreeIndexConfig5 = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null, null,
-        Collections.singletonList(starTreeAggregationConfig1), 100);
+    StarTreeIndexConfig starTreeIndexConfig5 =
+        new StarTreeIndexConfig(List.of("Carrier", "Distance"), null, null, List.of(starTreeAggregationConfig1), 100);
 
     // Create StarTreeIndexConfig for equality check.
-    StarTreeIndexConfig starTreeIndexConfig6 = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig6 = new StarTreeIndexConfig(List.of("Carrier", "Distance"), null,
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
 
     // test unequal builder config size.
     List<StarTreeV2BuilderConfig> config1 = new ArrayList<>();
@@ -139,11 +138,15 @@ public class StarTreeBuilderUtilsTest {
 
     // Create Schema and SegmentMetadata for testing.
     Schema schema = new Schema.SchemaBuilder().addSingleValueDimension("d1", FieldSpec.DataType.INT)
-        .addSingleValueDimension("d2", FieldSpec.DataType.LONG).addSingleValueDimension("d3", FieldSpec.DataType.FLOAT)
-        .addSingleValueDimension("d4", FieldSpec.DataType.DOUBLE).addMultiValueDimension("d5", FieldSpec.DataType.INT)
-        .addMetric("m1", FieldSpec.DataType.DOUBLE).addMetric("m2", FieldSpec.DataType.BYTES)
+        .addSingleValueDimension("d2", FieldSpec.DataType.LONG)
+        .addSingleValueDimension("d3", FieldSpec.DataType.FLOAT)
+        .addSingleValueDimension("d4", FieldSpec.DataType.DOUBLE)
+        .addMultiValueDimension("d5", FieldSpec.DataType.INT)
+        .addMetric("m1", FieldSpec.DataType.DOUBLE)
+        .addMetric("m2", FieldSpec.DataType.BYTES)
         .addTime(new TimeGranularitySpec(FieldSpec.DataType.LONG, TimeUnit.MILLISECONDS, "t"), null)
-        .addDateTime("dt", FieldSpec.DataType.LONG, "1:MILLISECONDS:EPOCH", "1:HOURS").build();
+        .addDateTime("dt", FieldSpec.DataType.LONG, "1:MILLISECONDS:EPOCH", "1:HOURS")
+        .build();
     SegmentMetadataImpl segmentMetadata = mock(SegmentMetadataImpl.class);
     when(segmentMetadata.getSchema()).thenReturn(schema);
     // Included
@@ -176,38 +179,37 @@ public class StarTreeBuilderUtilsTest {
 
     // // Create a list of string with column name, hasDictionary and cardinality.
     List<List<String>> columnList =
-        Arrays.asList(Arrays.asList("d1", "true", "200"), Arrays.asList("d2", "true", "400"),
-            Arrays.asList("d3", "true", "20000"), Arrays.asList("d4", "false", "100"),
-            Arrays.asList("d5", "true", "100"), Arrays.asList("m1", "false", "-1"), Arrays.asList("m2", "true", "100"),
-            Arrays.asList("t", "true", "20000"), Arrays.asList("dt", "true", "30000"));
+        List.of(List.of("d1", "true", "200"), List.of("d2", "true", "400"), List.of("d3", "true", "20000"),
+            List.of("d4", "false", "100"), List.of("d5", "true", "100"), List.of("m1", "false", "-1"),
+            List.of("m2", "true", "100"), List.of("t", "true", "20000"), List.of("dt", "true", "30000"));
 
     // Convert the list of string to JsonNode with appropriate key names and root node.
     JsonNode segmentMetadataAsJsonNode = convertStringListToJsonNode(columnList);
 
     // Create StartTreeIndexConfig for testing.
-    StarTreeIndexConfig starTreeIndexConfig1 = new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), null,
-        Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+    StarTreeIndexConfig starTreeIndexConfig1 = new StarTreeIndexConfig(List.of("Carrier", "Distance"), null,
+        List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
 
     StarTreeIndexConfig starTreeIndexConfig2 =
-        new StarTreeIndexConfig(Arrays.asList("Carrier", "Distance"), Collections.singletonList("Distance"),
-            Collections.singletonList(AggregationFunctionColumnPair.COUNT_STAR.toColumnName()), null, 100);
+        new StarTreeIndexConfig(List.of("Carrier", "Distance"), List.of("Distance"),
+            List.of(AggregationFunctionColumnPair.COUNT_STAR_NAME), null, 100);
 
     // Create StartTreeV2BuilderConfig from segmentMetadataImpl.
     List<StarTreeV2BuilderConfig> builderConfig1 =
-        StarTreeBuilderUtils.generateBuilderConfigs(Arrays.asList(starTreeIndexConfig1, starTreeIndexConfig2), true,
+        StarTreeBuilderUtils.generateBuilderConfigs(List.of(starTreeIndexConfig1, starTreeIndexConfig2), true,
             segmentMetadata);
 
     // Create StartTreeV2BuilderConfig from JsonNode.
     List<StarTreeV2BuilderConfig> builderConfig2 =
-        StarTreeBuilderUtils.generateBuilderConfigs(Arrays.asList(starTreeIndexConfig1, starTreeIndexConfig2), true,
-            schema, segmentMetadataAsJsonNode);
+        StarTreeBuilderUtils.generateBuilderConfigs(List.of(starTreeIndexConfig1, starTreeIndexConfig2), true, schema,
+            segmentMetadataAsJsonNode);
 
     // They should be equal.
-    assertEquals(builderConfig1, builderConfig2);
+    assertEquals(builderConfig2, builderConfig1);
   }
 
   @Test
-  public void testShouldModifyExistingStarTreesDifferentParameters() {
+  public void testShouldModifyExistingStarTrees() {
     Configuration metadataProperties = new PropertiesConfiguration();
     TreeMap<AggregationFunctionColumnPair, AggregationSpec> aggregationSpecs = new TreeMap<>();
     aggregationSpecs.put(new AggregationFunctionColumnPair(AggregationFunctionType.DISTINCTCOUNTHLL, "col2"),
@@ -215,93 +217,118 @@ public class StarTreeBuilderUtilsTest {
     StarTreeV2Metadata.writeMetadata(metadataProperties, 1, List.of("col1"), aggregationSpecs, 100, Set.of());
     StarTreeV2Metadata existingStarTreeMetadata = new StarTreeV2Metadata(metadataProperties);
 
-    StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(List.of("col1"), null, null,
-        List.of(new StarTreeAggregationConfig("col2", "DISTINCTCOUNTHLL", Map.of(Constants.HLL_LOG2M_KEY, 16),
-            null, null, null, null, null)), 100);
+    StarTreeIndexConfig starTreeIndexConfig = new StarTreeIndexConfig(List.of("col1"), null, null, List.of(
+        new StarTreeAggregationConfig("col2", "DISTINCTCOUNTHLL", Map.of(Constants.HLL_LOG2M_KEY, 16), null, null, null,
+            null, null)), 100);
     assertFalse(StarTreeBuilderUtils.shouldModifyExistingStarTrees(
         List.of(StarTreeV2BuilderConfig.fromIndexConfig(starTreeIndexConfig)), List.of(existingStarTreeMetadata)));
 
-    // Change log2m value
-    starTreeIndexConfig = new StarTreeIndexConfig(List.of("col1"), null, null,
-        List.of(new StarTreeAggregationConfig("col2", "DISTINCTCOUNTHLL", Map.of(Constants.HLL_LOG2M_KEY, 8),
-            null, null, null, null, null)), 100);
+    // Change max leaf records
+    starTreeIndexConfig = new StarTreeIndexConfig(List.of("col1"), null, null, List.of(
+        new StarTreeAggregationConfig("col2", "DISTINCTCOUNTHLL", Map.of(Constants.HLL_LOG2M_KEY, 16), null, null, null,
+            null, null)), 200);
     assertTrue(StarTreeBuilderUtils.shouldModifyExistingStarTrees(
+        List.of(StarTreeV2BuilderConfig.fromIndexConfig(starTreeIndexConfig)), List.of(existingStarTreeMetadata)));
+
+    // Change compression codec
+    starTreeIndexConfig = new StarTreeIndexConfig(List.of("col1"), null, null, List.of(
+        new StarTreeAggregationConfig("col2", "DISTINCTCOUNTHLL", Map.of(Constants.HLL_LOG2M_KEY, 16),
+            FieldConfig.CompressionCodec.LZ4, null, null, null, null)), 100);
+    assertTrue(StarTreeBuilderUtils.shouldModifyExistingStarTrees(
+        List.of(StarTreeV2BuilderConfig.fromIndexConfig(starTreeIndexConfig)), List.of(existingStarTreeMetadata)));
+
+    // Change log2m value
+    starTreeIndexConfig = new StarTreeIndexConfig(List.of("col1"), null, null, List.of(
+        new StarTreeAggregationConfig("col2", "DISTINCTCOUNTHLL", Map.of(Constants.HLL_LOG2M_KEY, 8), null, null, null,
+            null, null)), 100);
+    assertTrue(StarTreeBuilderUtils.shouldModifyExistingStarTrees(
+        List.of(StarTreeV2BuilderConfig.fromIndexConfig(starTreeIndexConfig)), List.of(existingStarTreeMetadata)));
+
+    // Change index version
+    starTreeIndexConfig = new StarTreeIndexConfig(List.of("col1"), null, null, List.of(
+        new StarTreeAggregationConfig("col2", "DISTINCTCOUNTHLL", Map.of(Constants.HLL_LOG2M_KEY, 16), null, null, 4,
+            null, null)), 100);
+    assertFalse(StarTreeBuilderUtils.shouldModifyExistingStarTrees(
         List.of(StarTreeV2BuilderConfig.fromIndexConfig(starTreeIndexConfig)), List.of(existingStarTreeMetadata)));
   }
 
   @Test
   public void testExpressionContextFromFunctionParameters() {
     // DISTINCTCOUNTHLL
-    DistinctCountHLLValueAggregator hllValueAggregator = (DistinctCountHLLValueAggregator)
-        ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.DISTINCTCOUNTHLL,
-        StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTHLL,
-            Map.of(Constants.HLL_LOG2M_KEY, "10")));
-    assertEquals(10, hllValueAggregator.getLog2m());
-
-    hllValueAggregator = (DistinctCountHLLValueAggregator)
-        ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.DISTINCTCOUNTHLL,
+    DistinctCountHLLValueAggregator hllValueAggregator =
+        (DistinctCountHLLValueAggregator) ValueAggregatorFactory.getValueAggregator(
+            AggregationFunctionType.DISTINCTCOUNTHLL,
             StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTHLL,
-                Map.of()));
+                Map.of(Constants.HLL_LOG2M_KEY, "10")));
+    assertEquals(hllValueAggregator.getLog2m(), 10);
+
+    hllValueAggregator = (DistinctCountHLLValueAggregator) ValueAggregatorFactory.getValueAggregator(
+        AggregationFunctionType.DISTINCTCOUNTHLL,
+        StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTHLL,
+            Map.of()));
     // Verify default value used
-    assertEquals(8, hllValueAggregator.getLog2m());
+    assertEquals(hllValueAggregator.getLog2m(), 8);
 
     // DISTINCTCOUNTHLLPLUS
-    DistinctCountHLLPlusValueAggregator hllPlusValueAggregator = (DistinctCountHLLPlusValueAggregator)
-        ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
-        StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
-            Map.of(Constants.HLLPLUS_ULL_P_KEY, "10", Constants.HLLPLUS_SP_KEY, 20)));
-    assertEquals(10, hllPlusValueAggregator.getP());
-    assertEquals(20, hllPlusValueAggregator.getSp());
+    DistinctCountHLLPlusValueAggregator hllPlusValueAggregator =
+        (DistinctCountHLLPlusValueAggregator) ValueAggregatorFactory.getValueAggregator(
+            AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
+            StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
+                Map.of(Constants.HLLPLUS_ULL_P_KEY, "10", Constants.HLLPLUS_SP_KEY, 20)));
+    assertEquals(hllPlusValueAggregator.getP(), 10);
+    assertEquals(hllPlusValueAggregator.getSp(), 20);
 
-    hllPlusValueAggregator = (DistinctCountHLLPlusValueAggregator)
-        ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
+    hllPlusValueAggregator = (DistinctCountHLLPlusValueAggregator) ValueAggregatorFactory.getValueAggregator(
+        AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
         StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
             Map.of("garbage", "value")));
     // Verify default values used
-    assertEquals(14, hllPlusValueAggregator.getP());
-    assertEquals(0, hllPlusValueAggregator.getSp());
+    assertEquals(hllPlusValueAggregator.getP(), 14);
+    assertEquals(hllPlusValueAggregator.getSp(), 0);
 
-    hllPlusValueAggregator = (DistinctCountHLLPlusValueAggregator)
-        ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
+    hllPlusValueAggregator = (DistinctCountHLLPlusValueAggregator) ValueAggregatorFactory.getValueAggregator(
+        AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
         StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
             Map.of(Constants.HLLPLUS_ULL_P_KEY, "10")));
-    assertEquals(10, hllPlusValueAggregator.getP());
-    assertEquals(0, hllPlusValueAggregator.getSp());
+    assertEquals(hllPlusValueAggregator.getP(), 10);
+    assertEquals(hllPlusValueAggregator.getSp(), 0);
 
-    hllPlusValueAggregator = (DistinctCountHLLPlusValueAggregator)
-        ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
-            StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
-                Map.of(Constants.HLLPLUS_SP_KEY, 20)));
-    assertEquals(14, hllPlusValueAggregator.getP());
-    assertEquals(20, hllPlusValueAggregator.getSp());
+    hllPlusValueAggregator = (DistinctCountHLLPlusValueAggregator) ValueAggregatorFactory.getValueAggregator(
+        AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
+        StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTHLLPLUS,
+            Map.of(Constants.HLLPLUS_SP_KEY, 20)));
+    assertEquals(hllPlusValueAggregator.getP(), 14);
+    assertEquals(hllPlusValueAggregator.getSp(), 20);
 
     // DISTINCTCOUNTULL
-    DistinctCountULLValueAggregator ullValueAggregator = (DistinctCountULLValueAggregator)
-        ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.DISTINCTCOUNTULL,
-        StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTULL,
-            Map.of(Constants.HLLPLUS_ULL_P_KEY, "10")));
-    assertEquals(10, ullValueAggregator.getP());
+    DistinctCountULLValueAggregator ullValueAggregator =
+        (DistinctCountULLValueAggregator) ValueAggregatorFactory.getValueAggregator(
+            AggregationFunctionType.DISTINCTCOUNTULL,
+            StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTULL,
+                Map.of(Constants.HLLPLUS_ULL_P_KEY, "10")));
+    assertEquals(ullValueAggregator.getP(), 10);
 
-    ullValueAggregator = (DistinctCountULLValueAggregator)
-        ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.DISTINCTCOUNTULL,
+    ullValueAggregator = (DistinctCountULLValueAggregator) ValueAggregatorFactory.getValueAggregator(
+        AggregationFunctionType.DISTINCTCOUNTULL,
         StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTULL,
             Map.of("garbage", "value")));
     // Verify default value used
-    assertEquals(12, ullValueAggregator.getP());
+    assertEquals(ullValueAggregator.getP(), 12);
 
     // DISTINCTCOUNTCPCSKETCH
-    DistinctCountCPCSketchValueAggregator cpcSketchValueAggregator = (DistinctCountCPCSketchValueAggregator)
-        ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.DISTINCTCOUNTCPCSKETCH,
-        StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTCPCSKETCH,
-            Map.of(Constants.CPCSKETCH_LGK_KEY, 20)));
-    assertEquals(20, cpcSketchValueAggregator.getLgK());
+    DistinctCountCPCSketchValueAggregator cpcSketchValueAggregator =
+        (DistinctCountCPCSketchValueAggregator) ValueAggregatorFactory.getValueAggregator(
+            AggregationFunctionType.DISTINCTCOUNTCPCSKETCH,
+            StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTCPCSKETCH,
+                Map.of(Constants.CPCSKETCH_LGK_KEY, 20)));
+    assertEquals(cpcSketchValueAggregator.getLgK(), 20);
 
-    cpcSketchValueAggregator = (DistinctCountCPCSketchValueAggregator)
-        ValueAggregatorFactory.getValueAggregator(AggregationFunctionType.DISTINCTCOUNTCPCSKETCH,
+    cpcSketchValueAggregator = (DistinctCountCPCSketchValueAggregator) ValueAggregatorFactory.getValueAggregator(
+        AggregationFunctionType.DISTINCTCOUNTCPCSKETCH,
         StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTCPCSKETCH,
             Map.of()));
     // Verify default value used
-    assertEquals(12, cpcSketchValueAggregator.getLgK());
+    assertEquals(cpcSketchValueAggregator.getLgK(), 12);
 
     // DISTINCTCOUNTTHETASKETCH
     DistinctCountThetaSketchValueAggregator thetaSketchValueAggregator =
@@ -310,14 +337,14 @@ public class StarTreeBuilderUtilsTest {
             StarTreeBuilderUtils.expressionContextFromFunctionParameters(
                 AggregationFunctionType.DISTINCTCOUNTTHETASKETCH,
                 Map.of(Constants.THETA_TUPLE_SKETCH_NOMINAL_ENTRIES, 4096)));
-    assertEquals(4096, thetaSketchValueAggregator.getNominalEntries());
+    assertEquals(thetaSketchValueAggregator.getNominalEntries(), 4096);
 
     thetaSketchValueAggregator = (DistinctCountThetaSketchValueAggregator) ValueAggregatorFactory.getValueAggregator(
         AggregationFunctionType.DISTINCTCOUNTTHETASKETCH,
         StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTTHETASKETCH,
             Map.of()));
     // Verify default value used
-    assertEquals(16384, thetaSketchValueAggregator.getNominalEntries());
+    assertEquals(thetaSketchValueAggregator.getNominalEntries(), 16384);
 
     // DISTINCTCOUNTUPLESKETCH
     IntegerTupleSketchValueAggregator tupleSketchValueAggregator =
@@ -326,14 +353,14 @@ public class StarTreeBuilderUtilsTest {
             StarTreeBuilderUtils.expressionContextFromFunctionParameters(
                 AggregationFunctionType.DISTINCTCOUNTTUPLESKETCH,
                 Map.of(Constants.THETA_TUPLE_SKETCH_NOMINAL_ENTRIES, 4096)));
-    assertEquals(4096, tupleSketchValueAggregator.getNominalEntries());
+    assertEquals(tupleSketchValueAggregator.getNominalEntries(), 4096);
 
     tupleSketchValueAggregator = (IntegerTupleSketchValueAggregator) ValueAggregatorFactory.getValueAggregator(
         AggregationFunctionType.DISTINCTCOUNTTUPLESKETCH,
         StarTreeBuilderUtils.expressionContextFromFunctionParameters(AggregationFunctionType.DISTINCTCOUNTTUPLESKETCH,
             Map.of()));
     // Verify default value used
-    assertEquals(16384, tupleSketchValueAggregator.getNominalEntries());
+    assertEquals(tupleSketchValueAggregator.getNominalEntries(), 16384);
   }
 
   private ColumnMetadata getColumnMetadata(String column, boolean hasDictionary, int cardinality) {
